# excpp

./: .gitignore  CMakeLists.txt  README.md  compile.bat  notes.md
basics/: HelloWorld.cpp  Read.cpp  Write.cpp
classes/: Allocator.h  Common.h  Date.cpp  Date.h  Histogram.cpp  Histogram.h  Option.h  Result.h  Set.cpp  Set.h  Table.cpp  Table.h
cmake/: compile_shaders.cmake
concurrency-and-utilities/: DrawHistogram.cpp  FindDecimal.cpp  ThreadsHelloWorld.cpp  TimeLoop.cpp  regex
construction-cleanup-copy-and-move/: CMakeLists.txt  Editor.cpp  Editor.h  File.cpp  File.h  Handle.cpp  Handle.h  test.txt
containers-and-algorithms/: IntVector.cpp  ReadIntegersFromFile.cpp  ReadNameAndAge.cpp  ReadPerson.cpp  StringVector.cpp  WriteIntegersToFile.cpp
core/: CMakeLists.txt  ExString.cpp  ExString.h  Pointer.h
derived-classes/: CMakeLists.txt
derived-classes/base/: Base.hpp  CMakeLists.txt  Test.cpp
derived-classes/charvec/: CMakeLists.txt  charvec.cc
derived-classes/task/: CMakeLists.txt  task.cc  task.h
exception-handling/: CheckedPtr.cpp  CheckedPtr.h  Insexception.cpp  Integer.cpp  Integer.h  IoEx.cpp  IoEx.h  MainCatcher.cpp  Vector.cpp  Vector.h
expressions/: Bitwise.cpp  Calculator.cpp  Calculator.hpp  Parenthesize.cpp  ReadPairs.cpp  Strings.cpp  pairs.txt
files/: Includes.cpp  Includes.h
functions/: AliasFunction.cpp  Cat.cpp  Encrypt.cpp  HelloWorld.cpp  Tree.cpp
functions/static/: CMakeLists.txt  Static.cpp  Static.h  TestStatic.cpp
include/graphics/: buffers.h  commands.h  descriptors.h  glfw.hpp  graphics.hpp  image.h  images.h  png.h  renderer.hpp
include/math/: math.h
overloading/: CMakeLists.txt  Conversions.cpp  ExString.h  TestString.cpp
overloading/complex/: CMakeLists.txt  Complex.cpp  Complex.h  Imaginary.h
overloading/integer/: CMakeLists.txt  Integer.cpp  Integer.h
pointers-array-and-references/: Aliasing.cpp  PointerAlignments.cpp  PointerDiff.cpp  PrintMonths.cpp  ReadAndPrint.cpp  SizeOfChar.cpp  SwapInt.cpp  Variuos.cpp
result/: CMakeLists.txt
result/include/: Result.hpp
result/src/: Result.cpp
select-operations/: Apply.cpp  BadAlloc.cpp  SumElements.cpp
special-operations/: CMakeLists.txt
special-operations/pointer/: CMakeLists.txt  Pointer.cpp
special-operations/string/: CMakeLists.txt  Iterator.cpp  Iterator.h  Test.cpp
src/: buffers.cpp  commands.cpp  descriptors.cpp  glfw.cpp  graphics.cpp  image.cpp  images.cpp  math.cpp  png.cpp  renderer.cpp
statements/: Atoi.cpp  Errors.cpp  ForWhile.cpp  Itoa.cpp  StripComments.cpp
structures-unions-and-enumerations/: Date.cpp  Month.cpp  Month.h  Season.cpp  Season.h  Struct.cpp
test/: main.cpp
test/shader/: mesh.frag  mesh.vert  triangle.frag  triangle.vert
types-and-declarations/: Limits.cpp  ListLoop.cpp  PlainCharDetails.cpp  PrintCharInt.cpp  TestSizeOf.cpp
utils/: Measure.hpp
